--- a/index.html
+++ b/index.html
@@ -5,43 +5,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coming Soon</title>
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@300;600&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #0e0e0e;
+      font-family: 'Montserrat', Arial, sans-serif;
+      background: linear-gradient(135deg, #0e0e0e, #1a1a1a);
       color: #ffffff;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       text-align: center;
+      overflow: hidden;
     }
+
     .container {
       max-width: 600px;
-      padding: 20px;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.03);
+      border-radius: 15px;
+      box-shadow: 0 0 40px rgba(0,0,0,0.5);
+      animation: fadeIn 1.5s ease-in-out;
     }
+
     h1 {
       font-size: 3rem;
       margin-bottom: 10px;
       letter-spacing: 2px;
+      font-weight: 700;
+      color: #ffd700;
     }
+
     p {
+      font-family: 'Raleway', sans-serif;
       font-size: 1.2rem;
-      opacity: 0.9;
-      margin-top: 10px;
+      opacity: 0.85;
+      margin-top: 15px;
+      line-height: 1.6;
     }
+
     .brand {
       font-weight: bold;
-      font-size: 1.4rem;
+      font-size: 1.8rem;
       margin-bottom: 15px;
+      text-shadow: 0 0 10px currentColor, 0 0 20px currentColor;
     }
+
     .footer {
       margin-top: 40px;
       font-size: 0.9rem;
-      opacity: 0.5;
+      opacity: 0.6;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Optional subtle background animation */
+    body::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, rgba(255,255,255,0.03), transparent 70%);
+      animation: rotate 20s linear infinite;
+      z-index: 0;
+    }
+
+    @keyframes rotate {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    .container > * {
+      position: relative;
+      z-index: 1;
+    }
+
   </style>
 </head>
 
@@ -49,7 +96,7 @@
   <div class="container">
     <div class="brand" id="brandName"></div>
     <h1>Coming Soon</h1>
-    <p id="tagline">Our website is currently under development.</p>
+    <p id="tagline"></p>
 
     <div class="footer">
       &copy; <span id="year"></span> <span id="footerBrand"></span>. All Rights Reserved.
