--- a/index.html
+++ b/index.html
@@ -1,166 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Coming Soon</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Schematiq - Launching Soon</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
-    background: #121212;
-    color: #f5f5f5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-  }
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Inter', sans-serif;
+            background: #000; /* Black background */
+            color: #f5f5f5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: left; /* Aligned left as per image */
+            overflow: hidden;
+            position: relative;
+        }
 
-  .container {
-    max-width: 600px;
-    padding: 40px 30px;
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 12px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    animation: fadeIn 1.2s ease-in-out;
-    z-index: 1;
-    position: relative;
-  }
+        .browser-frame {
+            position: relative;
+            width: 90%; /* Adjust as needed */
+            max-width: 1200px; /* Max width for the browser window */
+            background: #222; /* Darker gray for browser frame */
+            border-radius: 8px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            overflow: hidden; /* To contain the inner content */
+            display: flex;
+            flex-direction: column;
+            min-height: 600px; /* Minimum height for the browser frame */
+        }
 
-  h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 3rem;
-    margin-bottom: 12px;
-    letter-spacing: 1px;
-    font-weight: 700;
-    color: #ffffff;
-  }
+        .browser-header {
+            background: #555; /* Gray for header */
+            height: 30px;
+            display: flex;
+            align-items: center;
+            padding: 0 10px;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+        }
 
-  p {
-    font-size: 1.1rem;
-    opacity: 0.8;
-    margin-top: 12px;
-    line-height: 1.6;
-  }
+        .browser-button {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            margin-right: 5px;
+        }
+        .browser-button.red { background: #ff5f56; }
+        .browser-button.yellow { background: #ffbd2e; }
+        .browser-button.green { background: #27c93f; }
 
-  .brand {
-    font-weight: 700;
-    font-size: 2rem;
-    margin-bottom: 15px;
-    color: #ffffff;
-    text-shadow: none; /* Removed harsh shadows */
-  }
+        .browser-address-bar {
+            flex-grow: 1;
+            background: #333; /* Slightly lighter gray for address bar */
+            height: 20px;
+            border-radius: 10px;
+            margin: 0 10px;
+        }
 
-  .footer {
-    margin-top: 40px;
-    font-size: 0.9rem;
-    opacity: 0.6;
-  }
+        .content-area {
+            flex-grow: 1;
+            background: #000; /* Black content background */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* To push footer down */
+            padding: 40px 60px; /* Padding inside content area */
+            position: relative;
+        }
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(15px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
+        .header-section {
+            display: flex;
+            align-items: center;
+            margin-bottom: 50px; /* Space between logo and text */
+        }
 
-  /* Mini game canvas */
-  #gameCanvas {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    border: 1px solid #ffffff40;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.05);
-    width: 200px;
-    height: 150px;
-    z-index: 2;
-  }
+        .logo {
+            font-family: 'Inter', sans-serif;
+            font-weight: 600; /* Medium-bold for logo */
+            font-size: 1.5rem;
+            color: #fff;
+            margin-left: 10px;
+        }
 
-</style>
+        .logo-icon {
+            width: 30px;
+            height: 30px;
+            background: #fff; /* White square */
+            border-radius: 4px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.2rem;
+            color: #000;
+            font-weight: 700;
+        }
+
+        h1 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 5rem; /* Large font size for "Launching Soon" */
+            line-height: 1;
+            margin: 0;
+            color: #ffffff;
+            font-weight: 700;
+        }
+
+        .text-content {
+            max-width: 500px; /* Constrain text width */
+            margin-top: 40px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            opacity: 0.9;
+            line-height: 1.6;
+            margin: 0;
+            font-weight: 400; /* Regular weight for body text */
+        }
+
+        /* Abstract shapes */
+        .shape-left {
+            position: absolute;
+            top: 20%;
+            right: 0;
+            width: 250px;
+            height: 150px;
+            background: linear-gradient(135deg, #00c6ff, #0072ff); /* Blue gradient */
+            border-radius: 50%;
+            filter: blur(80px); /* Soft blur */
+            opacity: 0.5;
+            transform: rotate(-30deg);
+        }
+
+        .shape-right {
+            position: absolute;
+            bottom: -50px;
+            right: -50px;
+            width: 400px;
+            height: 400px;
+            background: linear-gradient(45deg, #ff7e5f, #feb47b); /* Orange/pink gradient */
+            border-radius: 50%;
+            filter: blur(90px); /* Soft blur */
+            opacity: 0.4;
+            transform: rotate(20deg);
+        }
+
+        /* People image placeholder */
+        .people-image-placeholder {
+            position: absolute;
+            bottom: 40px; /* Adjust based on image position */
+            right: 60px; /* Adjust based on image position */
+            width: 350px; /* Approximate width */
+            height: 250px; /* Approximate height */
+            background: url('https://i.imgur.com/example-people-image.jpg') no-repeat center center / cover; /* Replace with actual image URL */
+            border-radius: 8px; /* Slightly rounded corners */
+            z-index: 2; /* Above shapes */
+            /* Using a placeholder for now, you'd replace this with the actual image */
+            background-color: #333; /* Placeholder background */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-size: 0.9rem;
+            text-align: center;
+            padding: 10px;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .browser-frame {
+                width: 95%;
+                min-height: 400px;
+            }
+            .content-area {
+                padding: 30px;
+            }
+            h1 {
+                font-size: 3rem;
+            }
+            p {
+                font-size: 1rem;
+            }
+            .header-section {
+                margin-bottom: 30px;
+            }
+            .people-image-placeholder {
+                width: 250px;
+                height: 180px;
+                bottom: 20px;
+                right: 30px;
+            }
+            .shape-left, .shape-right {
+                filter: blur(50px);
+                opacity: 0.3;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .content-area {
+                padding: 20px;
+            }
+            h1 {
+                font-size: 2.5rem;
+            }
+            .logo {
+                font-size: 1.2rem;
+            }
+            .logo-icon {
+                width: 25px;
+                height: 25px;
+                font-size: 1rem;
+            }
+            .people-image-placeholder {
+                display: none; /* Hide image on very small screens if it overlaps too much */
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="brand" id="brandName"></div>
-    <h1>Coming Soon</h1>
-    <p id="tagline"></p>
+    <div class="browser-frame">
+        <div class="browser-header">
+            <div class="browser-button red"></div>
+            <div class="browser-button yellow"></div>
+            <div class="browser-button green"></div>
+            <div class="browser-address-bar"></div>
+        </div>
 
-    <div class="footer">
-      &copy; <span id="year"></span> <span id="footerBrand"></span>. All Rights Reserved.
+        <div class="content-area">
+            <div class="header-section">
+                <div class="logo-icon">S</div> <div class="logo">schematiq</div>
+            </div>
+
+            <h1>Launching<br>soon</h1>
+
+            <div class="text-content">
+                <p>Tech doesn't have to feel like a different language. We built Schematiq to make sure innovation works for you, your business, and your people.</p>
+                <p>We can't wait to innovate with you!</p>
+            </div>
+
+            <div class="shape-left"></div>
+            <div class="shape-right"></div>
+
+            <div class="people-image-placeholder">
+                <p>Placeholder for people image</p>
+                </div>
+        </div>
     </div>
-  </div>
-
-  <canvas id="gameCanvas"></canvas>
-
-<script>
-  // Multi-domain setup
-  const domain = window.location.hostname.toLowerCase();
-
-  const sites = {
-    "zurialltd.com": { name: "Zurial Ltd", tagline: "Something amazing is on the way...", color: "#ffffff" },
-    "example1.com": { name: "Example Company One", tagline: "We’re building something special.", color: "#ffffff" },
-    "example2.com": { name: "Another Brand", tagline: "Prepare to experience greatness.", color: "#ffffff" }
-  };
-
-  const defaultSite = { name: "Our Website", tagline: "Coming soon. Stay tuned.", color: "#ffffff" };
-  const site = sites[domain] || defaultSite;
-
-  document.getElementById("brandName").textContent = site.name;
-  document.getElementById("footerBrand").textContent = site.name;
-  document.getElementById("tagline").textContent = site.tagline;
-  document.querySelector(".brand").style.color = site.color;
-  document.getElementById("year").textContent = new Date().getFullYear();
-
-  // --- Mini Game: Catch the Falling Star ---
-  const canvas = document.getElementById('gameCanvas');
-  const ctx = canvas.getContext('2d');
-  canvas.width = 200;
-  canvas.height = 150;
-
-  let paddle = { x: 70, y: 140, width: 60, height: 10, dx: 0 };
-  let star = { x: Math.random() * 180, y: 0, size: 10, dy: 2 };
-  let score = 0;
-
-  // Controls
-  document.addEventListener('keydown', e => { if(e.key === "ArrowLeft") paddle.dx = -4; if(e.key === "ArrowRight") paddle.dx = 4; });
-  document.addEventListener('keyup', e => { if(e.key === "ArrowLeft" || e.key === "ArrowRight") paddle.dx = 0; });
-
-  function drawPaddle() { ctx.fillStyle = "#ffffff"; ctx.fillRect(paddle.x, paddle.y, paddle.width, paddle.height); }
-  function drawStar() { ctx.fillStyle = "#ffffff"; ctx.beginPath(); ctx.arc(star.x + star.size/2, star.y + star.size/2, star.size/2, 0, Math.PI * 2); ctx.fill(); }
-  function drawScore() { ctx.fillStyle = "#ffffff"; ctx.font = "12px Poppins"; ctx.fillText("Score: " + score, 10, 15); }
-
-  function update() {
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-
-    // Paddle
-    paddle.x += paddle.dx;
-    if(paddle.x < 0) paddle.x = 0;
-    if(paddle.x + paddle.width > canvas.width) paddle.x = canvas.width - paddle.width;
-
-    // Star
-    star.y += star.dy;
-    if(star.y + star.size > canvas.height) {
-      if(star.x + star.size > paddle.x && star.x < paddle.x + paddle.width) score++;
-      star.y = 0;
-      star.x = Math.random() * (canvas.width - star.size);
-    }
-
-    drawPaddle();
-    drawStar();
-    drawScore();
-
-    requestAnimationFrame(update);
-  }
-
-  update();
-
-</script>
 </body>
 </html>
