--- a/index.html
+++ b/index.html
@@ -1,256 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schematiq - Launching Soon</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Schematiq - Launching Soon</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Inter', sans-serif;
-            background: #000; /* Black background */
-            color: #f5f5f5;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: left; /* Aligned left as per image */
-            overflow: hidden;
-            position: relative;
-        }
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    background: #000; /* Black background */
+    color: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    text-align: left;
+    overflow: hidden;
+    position: relative;
+  }
 
-        .browser-frame {
-            position: relative;
-            width: 90%; /* Adjust as needed */
-            max-width: 1200px; /* Max width for the browser window */
-            background: #222; /* Darker gray for browser frame */
-            border-radius: 8px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            overflow: hidden; /* To contain the inner content */
-            display: flex;
-            flex-direction: column;
-            min-height: 600px; /* Minimum height for the browser frame */
-        }
+  .container {
+    position: relative;
+    width: 90%;
+    max-width: 1200px;
+    padding: 60px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-        .browser-header {
-            background: #555; /* Gray for header */
-            height: 30px;
-            display: flex;
-            align-items: center;
-            padding: 0 10px;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
-        }
+  .header-section {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+  }
 
-        .browser-button {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            margin-right: 5px;
-        }
-        .browser-button.red { background: #ff5f56; }
-        .browser-button.yellow { background: #ffbd2e; }
-        .browser-button.green { background: #27c93f; }
+  .logo-icon {
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    border-radius: 6px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
+    color: #000;
+    font-weight: 700;
+  }
 
-        .browser-address-bar {
-            flex-grow: 1;
-            background: #333; /* Slightly lighter gray for address bar */
-            height: 20px;
-            border-radius: 10px;
-            margin: 0 10px;
-        }
+  .logo {
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 1.7rem;
+    color: #fff;
+    margin-left: 12px;
+    text-transform: capitalize;
+  }
 
-        .content-area {
-            flex-grow: 1;
-            background: #000; /* Black content background */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between; /* To push footer down */
-            padding: 40px 60px; /* Padding inside content area */
-            position: relative;
-        }
+  h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 5rem;
+    line-height: 1;
+    margin: 0;
+    font-weight: 700;
+    color: #ffffff;
+  }
 
-        .header-section {
-            display: flex;
-            align-items: center;
-            margin-bottom: 50px; /* Space between logo and text */
-        }
+  .text-content {
+    max-width: 600px;
+    margin-top: 30px;
+  }
 
-        .logo {
-            font-family: 'Inter', sans-serif;
-            font-weight: 600; /* Medium-bold for logo */
-            font-size: 1.5rem;
-            color: #fff;
-            margin-left: 10px;
-        }
+  p {
+    font-size: 1.1rem;
+    opacity: 0.9;
+    line-height: 1.6;
+    margin: 0 0 15px 0;
+  }
 
-        .logo-icon {
-            width: 30px;
-            height: 30px;
-            background: #fff; /* White square */
-            border-radius: 4px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            color: #000;
-            font-weight: 700;
-        }
+  /* Abstract shapes */
+  .shape-left {
+    position: absolute;
+    top: 10%;
+    right: -50px;
+    width: 250px;
+    height: 150px;
+    background: linear-gradient(135deg, #00c6ff, #0072ff);
+    border-radius: 50%;
+    filter: blur(80px);
+    opacity: 0.5;
+    transform: rotate(-30deg);
+  }
 
-        h1 {
-            font-family: 'Poppins', sans-serif;
-            font-size: 5rem; /* Large font size for "Launching Soon" */
-            line-height: 1;
-            margin: 0;
-            color: #ffffff;
-            font-weight: 700;
-        }
+  .shape-right {
+    position: absolute;
+    bottom: -50px;
+    right: -50px;
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(45deg, #ff7e5f, #feb47b);
+    border-radius: 50%;
+    filter: blur(90px);
+    opacity: 0.4;
+    transform: rotate(20deg);
+  }
 
-        .text-content {
-            max-width: 500px; /* Constrain text width */
-            margin-top: 40px;
-        }
+  .people-image-placeholder {
+    position: absolute;
+    bottom: 40px;
+    right: 60px;
+    width: 350px;
+    height: 250px;
+    background-color: #333;
+    border-radius: 8px;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 0.9rem;
+    text-align: center;
+    padding: 10px;
+  }
 
-        p {
-            font-size: 1.1rem;
-            opacity: 0.9;
-            line-height: 1.6;
-            margin: 0;
-            font-weight: 400; /* Regular weight for body text */
-        }
+  @media (max-width: 768px) {
+    h1 { font-size: 3rem; }
+    .text-content { max-width: 90%; margin-top: 20px; }
+    .people-image-placeholder { width: 250px; height: 180px; bottom: 20px; right: 30px; }
+    .shape-left, .shape-right { filter: blur(50px); opacity: 0.3; }
+  }
 
-        /* Abstract shapes */
-        .shape-left {
-            position: absolute;
-            top: 20%;
-            right: 0;
-            width: 250px;
-            height: 150px;
-            background: linear-gradient(135deg, #00c6ff, #0072ff); /* Blue gradient */
-            border-radius: 50%;
-            filter: blur(80px); /* Soft blur */
-            opacity: 0.5;
-            transform: rotate(-30deg);
-        }
+  @media (max-width: 480px) {
+    h1 { font-size: 2.5rem; }
+    .logo { font-size: 1.4rem; }
+    .logo-icon { width: 30px; height: 30px; font-size: 1rem; }
+    .people-image-placeholder { display: none; }
+  }
 
-        .shape-right {
-            position: absolute;
-            bottom: -50px;
-            right: -50px;
-            width: 400px;
-            height: 400px;
-            background: linear-gradient(45deg, #ff7e5f, #feb47b); /* Orange/pink gradient */
-            border-radius: 50%;
-            filter: blur(90px); /* Soft blur */
-            opacity: 0.4;
-            transform: rotate(20deg);
-        }
-
-        /* People image placeholder */
-        .people-image-placeholder {
-            position: absolute;
-            bottom: 40px; /* Adjust based on image position */
-            right: 60px; /* Adjust based on image position */
-            width: 350px; /* Approximate width */
-            height: 250px; /* Approximate height */
-            background: url('https://i.imgur.com/example-people-image.jpg') no-repeat center center / cover; /* Replace with actual image URL */
-            border-radius: 8px; /* Slightly rounded corners */
-            z-index: 2; /* Above shapes */
-            /* Using a placeholder for now, you'd replace this with the actual image */
-            background-color: #333; /* Placeholder background */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-            font-size: 0.9rem;
-            text-align: center;
-            padding: 10px;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .browser-frame {
-                width: 95%;
-                min-height: 400px;
-            }
-            .content-area {
-                padding: 30px;
-            }
-            h1 {
-                font-size: 3rem;
-            }
-            p {
-                font-size: 1rem;
-            }
-            .header-section {
-                margin-bottom: 30px;
-            }
-            .people-image-placeholder {
-                width: 250px;
-                height: 180px;
-                bottom: 20px;
-                right: 30px;
-            }
-            .shape-left, .shape-right {
-                filter: blur(50px);
-                opacity: 0.3;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .content-area {
-                padding: 20px;
-            }
-            h1 {
-                font-size: 2.5rem;
-            }
-            .logo {
-                font-size: 1.2rem;
-            }
-            .logo-icon {
-                width: 25px;
-                height: 25px;
-                font-size: 1rem;
-            }
-            .people-image-placeholder {
-                display: none; /* Hide image on very small screens if it overlaps too much */
-            }
-        }
-    </style>
+</style>
 </head>
 
 <body>
-    <div class="browser-frame">
-        <div class="browser-header">
-            <div class="browser-button red"></div>
-            <div class="browser-button yellow"></div>
-            <div class="browser-button green"></div>
-            <div class="browser-address-bar"></div>
-        </div>
-
-        <div class="content-area">
-            <div class="header-section">
-                <div class="logo-icon">S</div> <div class="logo">schematiq</div>
-            </div>
-
-            <h1>Launching<br>soon</h1>
-
-            <div class="text-content">
-                <p>Tech doesn't have to feel like a different language. We built Schematiq to make sure innovation works for you, your business, and your people.</p>
-                <p>We can't wait to innovate with you!</p>
-            </div>
-
-            <div class="shape-left"></div>
-            <div class="shape-right"></div>
-
-            <div class="people-image-placeholder">
-                <p>Placeholder for people image</p>
-                </div>
-        </div>
+  <div class="container">
+    <div class="header-section">
+      <div class="logo-icon" id="logoIcon">S</div>
+      <div class="logo" id="logoName">schematiq</div>
     </div>
+
+    <h1 id="mainTitle">Launching<br>soon</h1>
+
+    <div class="text-content" id="textContent">
+      <p>Tech doesn't have to feel like a different language. We built Schematiq to make sure innovation works for you, your business, and your people.</p>
+      <p>We can't wait to innovate with you!</p>
+    </div>
+
+    <div class="shape-left"></div>
+    <div class="shape-right"></div>
+    <div class="people-image-placeholder">Placeholder for people image</div>
+  </div>
+
+<script>
+  // Dynamic content example
+  const domain = window.location.hostname.toLowerCase();
+  const sites = {
+    "zurialltd.com": {
+      name: "Zurial Ltd",
+      title: "Launching soon",
+      description: [
+        "Something amazing is on the way...",
+        "Stay tuned for updates!"
+      ]
+    },
+    "schematiq.com": {
+      name: "Schematiq",
+      title: "Launching soon",
+      description: [
+        "Tech doesn't have to feel like a different language.",
+        "Innovation works for you and your people."
+      ]
+    }
+  };
+
+  const defaultSite = {
+    name: "Our Website",
+    title: "Coming Soon",
+    description: ["Exciting things are on the way!", "Stay tuned!"]
+  };
+
+  const site = sites[domain] || defaultSite;
+
+  document.getElementById("logoName").textContent = site.name;
+  document.getElementById("mainTitle").textContent = site.title;
+  const textContent = document.getElementById("textContent");
+  textContent.innerHTML = "";
+  site.description.forEach(p => {
+    const para = document.createElement("p");
+    para.textContent = p;
+    textContent.appendChild(para);
+  });
+
+</script>
 </body>
 </html>
