--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    background: #000; /* Black background */
+    background: #000;
     color: #f5f5f5;
     display: flex;
     align-items: center;
@@ -110,28 +110,28 @@
     transform: rotate(20deg);
   }
 
-  .people-image-placeholder {
+  /* Launch image */
+  .launch-image {
     position: absolute;
     bottom: 40px;
     right: 60px;
     width: 350px;
     height: 250px;
-    background-color: #333;
     border-radius: 8px;
     z-index: 2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    font-size: 0.9rem;
-    text-align: center;
-    padding: 10px;
+    overflow: hidden;
+    background-color: #333;
+  }
+  .launch-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   @media (max-width: 768px) {
     h1 { font-size: 3rem; }
     .text-content { max-width: 90%; margin-top: 20px; }
-    .people-image-placeholder { width: 250px; height: 180px; bottom: 20px; right: 30px; }
+    .launch-image { width: 250px; height: 180px; bottom: 20px; right: 30px; }
     .shape-left, .shape-right { filter: blur(50px); opacity: 0.3; }
   }
 
@@ -139,7 +139,7 @@
     h1 { font-size: 2.5rem; }
     .logo { font-size: 1.4rem; }
     .logo-icon { width: 30px; height: 30px; font-size: 1rem; }
-    .people-image-placeholder { display: none; }
+    .launch-image { display: none; }
   }
 
 </style>
@@ -161,7 +161,10 @@
 
     <div class="shape-left"></div>
     <div class="shape-right"></div>
-    <div class="people-image-placeholder">Placeholder for people image</div>
+
+    <div class="launch-image" id="launchImage">
+      <img src="" alt="Launch image">
+    </div>
   </div>
 
 <script>
@@ -196,6 +199,7 @@
 
   document.getElementById("logoName").textContent = site.name;
   document.getElementById("mainTitle").textContent = site.title;
+
   const textContent = document.getElementById("textContent");
   textContent.innerHTML = "";
   site.description.forEach(p => {
@@ -204,6 +208,9 @@
     textContent.appendChild(para);
   });
 
+  // Set random launch image from Picsum
+  const launchImage = document.querySelector("#launchImage img");
+  launchImage.src = "https://picsum.photos/seed/" + site.name.replace(/\s+/g,'') + "/350/250";
 </script>
 </body>
 </html>
